# accumath

./: pyproject.toml
.github/workflows/: publish.yml
src/: __init__.py  accumath.py
